traces/bug_7.txt
#7
build-debug-x64/tlm/deps/folly.exploded/include/folly/synchronization/detail/HazptrUtils.h:334: error: Dead Store
  The value written to `&s` (type `folly::detail::Sleeper*`) is never used.

build-debug-x64/tlm/deps/folly.exploded/include/folly/synchronization/detail/HazptrUtils.h:334:28: Write of unused value
332. 
333.   Node* pop_all_lock() noexcept {
334.     folly::detail::Sleeper s;
                                ^
335.     while (true) {
336.       auto oldval = head();
